# opengl_project

./: .gitignore  README.md
clock/: CMakeLists.txt  draw.cpp  draw.h  main.cpp  version.rc
test/: CMakeLists.txt  draw.cpp  draw.h  main.cpp
